--- a/styles/components/Select.scss
+++ b/styles/components/Select.scss
@@ -1,7 +1,7 @@
 @mixin select-size($height, $padding, $font-size, $border-radius) {  
 
   .ui-select-selection {
-    /*height: $height;*/
+    min-height: $height;
     font-size: $font-size;
 
     .ui-select-text {
@@ -47,7 +47,7 @@
     transition: all .3s cubic-bezier(.645, .045, .355, 1);
     /*box-shadow: inset 0 1px 3px #e3e3e3;*/
     cursor: pointer;
-
+    
     &:hover {
       border-color: #57c5f7;
     }
@@ -73,7 +73,6 @@
     .ui-select-arrow {
       position: absolute;
       top: 50%;
-      margin-top: -6px;
       color: #d9d9d9;
       transition: transform .2s ease;
       line-height: normal;
