--- a/styles/components/Icon.scss
+++ b/styles/components/Icon.scss
@@ -33,3 +33,5 @@
 .ui-icon-add:before { content: "\e606"; }
 .ui-icon-minus:before { content: "\e607"; }
 .ui-icon-date:before { content: "\e63d"; }
+.ui-icon-loading:before { content: "\e608"; }
+
