--- a/styles/components/Icon.scss
+++ b/styles/components/Icon.scss
@@ -11,9 +11,9 @@
 .ui-icon {
   font-family: "dragonicon" !important;
   font-style: normal;
-  -webkit-font-smoothing: antialiased;
+/*  -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;*/
 }
 
 .ui-icon-check:before { content: "\e602"; }
