--- a/styles/core/animations/rotate.scss
+++ b/styles/core/animations/rotate.scss
@@ -1,9 +1,9 @@
 
 @keyframes rotate360 {
-  0% { 
+  from { 
     transform: rotate(0);
   }
-  100% { 
+  to { 
     transform: rotate(360deg);
   }
 }
