--- a/styles/components/Input.scss
+++ b/styles/components/Input.scss
@@ -38,7 +38,7 @@
   &.disabled,
   &:disabled {
     cursor: not-allowed;
-    background: #eee;
+    background-color: #f3f5f7;
     
     &:focus,
     &.focus {
