--- a/styles/components/Form.scss
+++ b/styles/components/Form.scss
@@ -84,6 +84,11 @@
     max-width: 100%;
     margin-bottom: 5px;
     color: #333;
+
+    .ui-form-item-required {
+      color: $base-theme-error;
+      margin-right: 3px;
+    }
   }
 
   .ui-form-item-control {
