--- a/styles/components/Icon.scss
+++ b/styles/components/Icon.scss
@@ -34,4 +34,6 @@
 .ui-icon-minus:before { content: "\e607"; }
 .ui-icon-date:before { content: "\e63d"; }
 .ui-icon-loading:before { content: "\e608"; }
+.ui-icon-required:before { content: "\e60d"; }
+
 
