add pagination padding

--- a/styles/components/Pagination.scss
+++ b/styles/components/Pagination.scss
@@ -50,6 +50,7 @@
   display: inline-block;
   border: 1px solid transparent;
   min-width: 28px;
+  padding: 0 6px;
   height: 28px;
   line-height: 26px;
   text-align: center;
