--- a/styles/components/Slider.scss
+++ b/styles/components/Slider.scss
@@ -11,18 +11,23 @@
 	position:relative;
 	overflow:visible;
 	border-radius: 4px;
+	cursor:pointer;
 	.ui-slider-handle{
 		top: -3px;
     margin-left: -9px;
-    // transition:left 0.6s ease-out;
+    //transition:left 0.6s ease-out;
 	}
 	.ui-slider-back{
 		overflow: hidden;
 		height:100%;
 		position: absolute;
     background-color: #eee;
-    // transition:width 0.6s ease-out;
+    //transition:width 0.6s ease-out;
+    width:0%;
 	}
+}
+.ui-slider-horizontal:hover .ui-slider-tip{
+    	display:block
 }
 .ui-slider-handle{
   z-index: 1;
@@ -41,4 +46,31 @@
     background-position: 0 -5px;
     transition: background-position .1s linear;
   }
+  .ui-slider-tip{
+  	display:none;
+  	position:absolute;
+  	color: #fff;
+  	background-color: rgba(0,0,0,.8);
+  	padding: 4px 8px;
+  	font-style:normal;
+  	transform:translate(-50%, -140%);
+  	left:50%;
+  	border-radius:4px;
+  	&::after{
+  		content:'';
+  		position:absolute;
+  		width:0;
+  		height:0;
+  		border-color:transparent;
+  		border-style: solid;
+  		border-width: 8px;
+  		border-top-color: rgba(0,0,0,.8);
+  		bottom:-14px;
+  		transform:translateX(-50%);
+  		left:50%;
+  	}
+  	&.ui-slider-tip-show{
+  		display:block;
+  	}
+	}
 }
