table fix bug for has the same key

--- a/examples/styles/pages/example.scss
+++ b/examples/styles/pages/example.scss
@@ -1,9 +1,9 @@
 
 .example {
-   padding: 15px;
 
   > .title {
-    margin: 50px auto;
+    margin: 0 auto;
+    margin-bottom: 50px;
     text-align: center;
 
     > h1 {
