--- a/examples/styles/components/Document.scss
+++ b/examples/styles/components/Document.scss
@@ -5,7 +5,13 @@
     margin-top: 30px;
   }
 
-  > .doc-title {
+  &:hover {
+    .doc-body {
+      box-shadow: 0 3px 6px rgba(0,0,0,.07);
+    }
+  }
+
+  .doc-title {
     padding-left: 5px;
     height: 30px;
     line-height: 30px;
@@ -13,10 +19,10 @@
     color: #333;
   }
 
-  > .doc-body {
+  .doc-body {
     border: 1px solid #eee;
 
-    > .doc-demo {
+    .doc-demo {
       padding: 15px;
 
       &:before {
@@ -44,7 +50,7 @@
       }
     }
 
-    > .doc-code {
+    .doc-code {
       padding: 5px;
       border-top: 1px solid #eee;
       background-color: #F8F8F8;
