--- a/examples/styles/pages/App.scss
+++ b/examples/styles/pages/App.scss
@@ -10,7 +10,7 @@
 
   .inner {
     width: 100%;
-    border-left: 250px solid #40c16b;
+    /*border-left: 250px solid #40c16b;*/
     padding: 80px;
   }
 
