--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -16,11 +16,11 @@
 .ui-table {
   @include table-size(12px, $base-radius);
   color: #666;
-  
+
   .ui-table-body {
     transition: opacity .3s ease;
   }
-  
+
   table {
     width: 100%;
     max-width: 100%;
@@ -52,19 +52,26 @@
         }
       }
     }
-  }
-
-  &.ui-table-bordered {
-    table {
-      border: 1px solid #d9d9d9;
+    &.ui-table-multi-headrow {
+      border: 1px solid #e9e9e9;
+      border-right: 0;
+      text-align: center;
 
       th,
       td {
         border-right: 1px solid #e9e9e9;
+      }
+    }
+  }
 
-        &:last-child {
-          border-right: 0;
-        }
+  &.ui-table-bordered {
+    table {
+      border: 1px solid #e9e9e9;
+      border-right: 0;
+
+      th,
+      td {
+        border-right: 1px solid #e9e9e9;
       }
     }
   }
@@ -110,8 +117,8 @@
   .ui-table-sorter-up,
   .ui-table-sorter-down {
     display: block;
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     cursor: pointer;
     border-style: solid;
   }
