--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -20,6 +20,7 @@
 @import "Table";
 @import "Pagination";
 @import "Panel";
+@import "Popover";
 @import "Step";
 @import "Tooltip";
 @import "Tab";
