--- a/styles/components/Popover.scss
+++ b/styles/components/Popover.scss
@@ -3,7 +3,7 @@
 
   &-content {
     display: none;
-    padding: 10px;
+    padding: 10px 18px;
     z-index: 999;
     background-color: #fff;
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1); 
