--- a/styles/components/Pagination.scss
+++ b/styles/components/Pagination.scss
@@ -43,6 +43,8 @@
   }
   &-total {
     float: left;
+    line-height: 28px;
+    padding-right: 4px;
     color: #999;
   }
   &-pagers {
@@ -57,6 +59,7 @@
   &-size, &-jumper {
     float: left;
     margin-left: 6px;
+    line-height: 28px;
     
     .ui-select {
       vertical-align: inherit;
