chore: update Table

--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -139,7 +139,7 @@
   &.ui-table-hover {
     tbody {
       tr:hover, tr.hover {
-        background-color: #ecf6fd;
+        background-color: #ecf6fd !important;
       }
     }
   }
