--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -22,6 +22,8 @@
     width: 100%;
     overflow-x: auto;
     transition: opacity .3s ease;
+    border-left: 1px solid #e9e9e9;
+    border-right: 1px solid #e9e9e9;
   }
   .ui-table-fixed-left {
     position: absolute;
@@ -100,12 +102,17 @@
     }
     &.ui-table-multi-headrow {
       border: 1px solid #e9e9e9;
+      border-left: 0;      
       border-right: 0;
       text-align: center;
 
       th,
       td {
         border-right: 1px solid #e9e9e9;
+
+        &:last-child {
+          border-right: 0;
+        }
       }
     }
   }
@@ -119,11 +126,16 @@
   &.ui-table-bordered {
     table {
       border: 1px solid #e9e9e9;
+      border-left: 0;
       border-right: 0;
 
       th,
       td {
         border-right: 1px solid #e9e9e9;
+
+        &:last-child {
+          border-right: 0;
+        }
       }
     }
   }
