--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -7,6 +7,9 @@
   }
 
   &.ui-table-radius {
+    .ui-table-body {
+      border-radius: $border-radius;
+    }
     table {
       border-radius: $border-radius;
     }
@@ -29,7 +32,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    border: 1px solid #e9e9e9;
+    border: 1px solid #e9e9e9 !important;
     border-bottom: 0;
     transition: box-shadow 0.3s ease-out;
 
@@ -43,7 +46,7 @@
     top: 0;
     right: 0;
     height: 100%;
-    border: 1px solid #e9e9e9;
+    border: 1px solid #e9e9e9 !important;
     border-bottom: 0;
     transition: box-shadow 0.3s ease-out;
 
