--- a/styles/components/Radio.scss
+++ b/styles/components/Radio.scss
@@ -11,6 +11,7 @@
 .ui-radio {
   display: inline-block;
   position: relative;
+  padding-right: $base-padding-xs;
   font-size: 14px;
   line-height: 1;
   vertical-align: middle;
