--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -117,6 +117,11 @@
           border-right: 0;
         }
       }
+      tr:not(:first-child) {
+        th {
+          border-right: 1px solid #e9e9e9;
+        }
+      }
     }
   }
 
@@ -138,6 +143,11 @@
 
         &:last-child {
           border-right: 0;
+        }
+      }
+      tr:not(:first-child) {
+        th {
+          border-right: 1px solid #e9e9e9;
         }
       }
     }
