--- a/examples/styles/components/Header.scss
+++ b/examples/styles/components/Header.scss
@@ -1,6 +1,6 @@
 @import "../functions/index";
 
-header {
-  padding: r(15);
-  font-size: r(16);
-}
+// header {
+//   padding: r(15);
+//   font-size: r(16);
+// }
