add Select, Input, Tag, Pagination etc.

--- a/examples/styles/components/App.scss
+++ b/examples/styles/components/App.scss
@@ -258,7 +258,8 @@ body {
     position: relative;
     padding: 24px;
 
-    button, .ui-tag {
+    button,
+    .ui-tag {
       margin-right: 8px;
     }
 
