--- a/components/style/index.scss
+++ b/components/style/index.scss
@@ -1,3 +1,3 @@
-@import "./core/index";
-@import "./themes/default";
-@import "./animations/index";
+@import './animations/index';
+@import './themes/default';
+@import './core/index';
