--- a/components/Dropdown/style/component.scss
+++ b/components/Dropdown/style/component.scss
@@ -9,7 +9,7 @@
 
 .ui-dropdown {
   @include dropdown-size($base-radius);
-  width: 100%;
+  min-width: 100%;
   background-color: #fff;
   border: 1px solid #d9d9d9;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0,0,0,0.17);
