add notification component version 1

--- a/components/style/themes/default.scss
+++ b/components/style/themes/default.scss
@@ -14,6 +14,8 @@ $base-radius:              4px !default;
 $base-radius-sm:           4px !default;
 $base-radius-xs:           4px !default;
 
+$box-shadow-base:          0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
+
 $base-height-xl:           40px !default;
 $base-height-lg:           36px !default;
 $base-height:              32px !default;
