--- a/components/Menu/style/component.scss
+++ b/components/Menu/style/component.scss
@@ -40,6 +40,7 @@
     overflow: hidden;
     transition: background .3s ease;
     user-select: none;
+    transition: color .3s cubic-bezier(.645,.045,.355,1),border-color .3s cubic-bezier(.645,.045,.355,1),background .3s cubic-bezier(.645,.045,.355,1),padding .15s cubic-bezier(.645,.045,.355,1);
     
     &:hover{
       color: #1890ff;
@@ -57,9 +58,34 @@
     }
   }
 
+  &-horizontal {
+    .ui-menu-item {
+      float: left;
+      padding: 0 20px;
+      height: 54px;
+      line-height: 54px;
+      border-bottom: 2px solid transparent;
+
+      &.active,
+      &:hover {
+        border-bottom: 2px solid #1890ff;
+        background: #fff;
+        color: #1890ff;
+      }
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      height: 0;
+      clear: both;
+    }
+  }
+
   &-dark {
     background: #001529;
     .ui-menu-item {
+      color: hsla(0,0%,100%,.65);
       &:hover {
         color: #fff;
         background: inherit;
@@ -68,6 +94,14 @@
       &.active {
         color: #fff;
         background: #1890ff;
+      }
+    }
+    .ui-menu-submenu {
+      color: hsla(0,0%,100%,.65);
+      &-title {
+        &:hover{
+          color: #fff;
+        }
       }
     }
   }
