--- a/components/Dropdown/style/component.scss
+++ b/components/Dropdown/style/component.scss
@@ -1,7 +1,7 @@
 
 @import '../../style/index';
 
-@mixin dropdown-size($border-radius) {  
+@mixin dropdown-size($border-radius) {
   &.radius {
     border-radius: $border-radius;
   }
@@ -9,14 +9,13 @@
 
 .ui-dropdown {
   @include dropdown-size($base-radius);
+
   min-width: 100%;
   background-color: #fff;
   border: 1px solid #d9d9d9;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0,0,0,0.17);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(0, 0, 0, 0.17);
   text-align: left;
-  animation-duration: 300ms;
-  z-index: 100;
-  
+
   &.ui-dropdown-hidden {
     display: none;
   }
