fix: add padding on select when not found option

--- a/components/Notification/style/component.scss
+++ b/components/Notification/style/component.scss
@@ -2,7 +2,7 @@
 
 .ui-notification {
   width: 330px;
-  padding: 20px;
+  padding: 8px 16px 16px;
   box-sizing: border-box;
   border-radius:  $base-radius-xs;
   position: fixed;
