--- a/components/Modal/style/component.scss
+++ b/components/Modal/style/component.scss
@@ -14,6 +14,11 @@
   user-select: none;
   overflow: auto;
   z-index: $base-zindex-modal;
+  will-change: opcaity;
+
+  .ui-modal-dialog {
+    will-change: tranfrom;
+  }
 
   &.radius {
     .ui-modal-dialog {
@@ -30,12 +35,12 @@
   > .ui-modal-wrapper {
     width: 100%;
     margin: auto 0;
-  
+
     > .ui-modal-dialog {
       position: relative;
       margin: 60px auto;
       background: #fff;
-      box-shadow: 0 7px 21px rgba(0,0,0,.2);
+      box-shadow: 0 7px 21px rgba(0, 0, 0, .2);
       overflow: hidden;
       z-index: $base-zindex-modal + 1;
     }
